--- a/custom_components/googlewifi/manifest.json
+++ b/custom_components/googlewifi/manifest.json
@@ -4,7 +4,8 @@
     "config_flow": true,
     "documentation": "https://github.com/djtimca/hagooglewifi",
     "requirements": [
-      "googlewifi==0.0.21"
+      "ghome-foyer-api>=1.0.0,<2.0.0",
+      "gpsoauth==1.0.3"
     ],
     "issue_tracker": "https://github.com/djtimca/hagooglewifi/issues",
     "ssdp": [],
